# tinyexpr

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TinyExprChanges.md  benchmark.c  example.c  example1.c  example2.c  example3.c  example_diff.c  minctest.h  monolithic_examples.h  monolithic_main.c  repl.c  smoke.c  tinyexpr.c  tinyexpr.cpp  tinyexpr.h
.github/workflows/: i18n-check.yml  spell-check.yml
docs/manual/: _quarto.yml  compile-time-options.qmd  embedded-programming.qmd  functions.qmd  index.qmd  operators.qmd  unknown-symbol-resolution.qmd  usage.qmd
docs/manual/latex/: default.tex
tests/: CMakeLists.txt  testingmain.cpp  tetests.cpp
tests/demo/: CMakeLists.txt  tedemo.cpp
